# rtic-nrf24l01

./: .gitignore  Cargo.toml
src/: bit_mnemonics.rs  command.rs  config.rs  error.rs  lib.rs  register.rs  state.rs
src/config/: address_width.rs  bit_correction.rs  crc.rs  data_pipe.rs  data_rate.rs  error.rs  interrupt_mask.rs  power_amplifier.rs
