[package]
name = "rtic-nrf24l01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"

[dependencies.rtic-monotonics]
version = "1.0.0"
optional = true

[features]
default = ["systick"]
blocking = []
systick = ["dep:rtic-monotonics", "rtic-monotonics/cortex-m-systick"]
rp2040 = ["dep:rtic-monotonics", "rtic-monotonics/rp2040"]