[package]
name = "rtic-nrf24l01"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3"

[dependencies.embedded-hal]
version = "1.0.0"
optional = true

[dependencies.embedded-hal-02]
package = "embedded-hal"
version = "0.2.7"
optional = true

[dependencies.rtic-monotonics]
version = "2.0.3"
optional = true

[features]
default = ["embedded-hal"]
embedded-hal = ["dep:embedded-hal"]
embedded-hal-02 = ["dep:embedded-hal-02"]
systick = ["dep:rtic-monotonics", "rtic-monotonics/cortex-m-systick"]
rp2040 = ["dep:rtic-monotonics", "rtic-monotonics/rp2040"]